Update: change palyerID(Long) to String for JS display

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h1>Webcome to Buckshot_Roulette</h1>
+<p></p>
+<a href="testfile.html"/>Click here to test Buckshot Roulette Client</a>
 </body>
 </html>
