add test url overlay complete

--- a/frontend/src/assets/img/Example/dynamic-event.html
+++ b/frontend/src/assets/img/Example/dynamic-event.html
@@ -11,8 +11,8 @@
   "
 >
   <div
-    data-layer="Action Type=use hchainsaw"
-    class="ActionTypeUseHchainsaw"
+    data-layer="Action Type=attack real"
+    class="ActionTypeAttackReal"
     style="
       width: 1299px;
       height: 621px;
@@ -72,8 +72,8 @@
       target
     </div>
     <img
-      data-layer="fire"
-      class="Fire"
+      data-layer="fire efect"
+      class="FireEfect"
       style="
         width: 703px;
         height: 689.38px;
@@ -84,8 +84,8 @@
       src=""
     />
     <img
-      data-layer="Frame 19"
-      class="Frame19"
+      data-layer="gun"
+      class="Gun"
       style="
         width: 455px;
         height: 518.99px;
@@ -188,8 +188,8 @@
       src=""
     />
     <img
-      data-layer="go solo 1"
-      class="GoSolo1"
+      data-layer="go solo efect"
+      class="GoSoloEfect"
       style="
         width: 896px;
         height: 896px;
@@ -472,7 +472,7 @@
       top: -2px;
       position: absolute;
       overflow: hidden;
-      background-image: url("");
+      background-image: none;
     "
   >
     <div
@@ -532,7 +532,7 @@
       top: -2px;
       position: absolute;
       overflow: hidden;
-      background-image: url("");
+      background-image: none;
     "
   >
     <div
@@ -592,7 +592,7 @@
       top: -2px;
       position: absolute;
       overflow: hidden;
-      background-image: url("");
+      background-image: none;
     "
   >
     <div
@@ -666,7 +666,7 @@
       top: 0px;
       position: absolute;
       overflow: hidden;
-      background-image: url("");
+      background-image: none;
     "
   >
     <div
@@ -792,8 +792,8 @@
       target
     </div>
     <img
-      data-layer="Frame 19"
-      class="Frame19"
+      data-layer="fire fake effect"
+      class="FireFakeEffect"
       style="
         width: 703px;
         height: 689.38px;
@@ -804,8 +804,8 @@
       src=""
     />
     <img
-      data-layer="Frame 19"
-      class="Frame19"
+      data-layer="gun"
+      class="Gun"
       style="
         width: 455px;
         height: 518.99px;
