--- a/frontend/src/assets/img/Example/overlay.html
+++ b/frontend/src/assets/img/Example/overlay.html
@@ -1,31 +1,31 @@
 <div
-  data-layer="Overlay"
-  class="Overlay"
-  style="
+        data-layer="Overlay"
+        class="Overlay"
+        style="
     width: 1920px;
     height: 1080px;
     position: relative;
-    background: rgba(55.17, 55.17, 55.17, 0.65);
+    background: transparent;
     overflow: hidden;
   "
 >
   <div
-    data-layer="background"
-    class="Background"
-    style="
+          data-layer="background"
+          class="Background"
+          style="
       width: 2218px;
       height: 1070px;
       left: -180px;
       top: -49px;
       position: absolute;
       overflow: hidden;
-      background-image: url("");
+      background-image: none;;
     "
   >
     <div
-      data-layer="Notify action"
-      class="NotifyAction"
-      style="
+            data-layer="Notify action"
+            class="NotifyAction"
+            style="
         left: 927px;
         top: 140px;
         position: absolute;
@@ -40,35 +40,35 @@
     </div>
   </div>
   <div
-    data-layer="Dynamic_Action_Structure"
-    data-action-type="use hchainsaw"
-    class="DynamicActionStructure"
-    style="
+          data-layer="Dynamic_Action_Structure"
+          data-action-type="attack real"
+          class="DynamicActionStructure"
+          style="
       width: 1299px;
       height: 621px;
       left: 280px;
       top: 230px;
       position: absolute;
-      background: rgba(255, 255, 255, 0);
+      background: transparent;
       overflow: hidden;
     "
   >
     <img
-      data-layer="Avatar_Slot"
-      class="AvatarSlot"
-      style="
+            data-layer="Avatar_Slot"
+            class="AvatarSlot"
+            style="
         width: 281px;
         height: 369px;
         left: 50px;
         top: 49px;
         position: absolute;
       "
-      src=""
+            src=""
     />
     <div
-      data-layer="actor"
-      class="Actor"
-      style="
+            data-layer="actor"
+            class="Actor"
+            style="
         width: 368px;
         height: 204.01px;
         left: 901px;
@@ -84,9 +84,9 @@
       actor
     </div>
     <div
-      data-layer="target"
-      class="Target"
-      style="
+            data-layer="target"
+            class="Target"
+            style="
         width: 426px;
         height: 204.01px;
         left: 0px;
@@ -102,21 +102,21 @@
       target
     </div>
     <img
-      data-layer="fire"
-      class="Fire"
-      style="
+            data-layer="fire efect"
+            class="FireEfect"
+            style="
         width: 703px;
         height: 689.38px;
         left: -106px;
         top: -108.73px;
         position: absolute;
       "
-      src=""
+            src=""
     />
     <img
-      data-layer="Frame 19"
-      class="Frame19"
-      style="
+            data-layer="gun"
+            class="Gun"
+            style="
         width: 455px;
         height: 518.99px;
         left: 951px;
@@ -125,12 +125,12 @@
         transform: rotate(180deg);
         transform-origin: top left;
       "
-      src=""
+            src=""
     />
     <img
-      data-layer="Avatar_Slot"
-      class="AvatarSlot"
-      style="
+            data-layer="Avatar_Slot"
+            class="AvatarSlot"
+            style="
         width: 356px;
         height: 474px;
         left: 1287px;
@@ -139,7 +139,7 @@
         transform: rotate(180deg);
         transform-origin: top left;
       "
-      src=""
+            src=""
     />
   </div>
 </div>
